[package]
name = "Hoffman-Final-Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
getrandom = "0.2.8"
ggez = "0.8.1"
oorandom = "11.1.3"
serde = "1.0.144"
rand = "0.8.4"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
serde1 = "1.0.1"


